src/ui/radarr_ui/history/snapshots/managarr__ui__radarr_ui__history__history_ui_tests__tests__snapshot_tests__history_tab_SearchHistoryError.snap
---
source: src/ui/radarr_ui/history/history_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Source Title ▼                                                Event Type               Language             Quality               Date                            
=> Test                                                          grabbed                  English              HD - 1080p            2022-12-30 07:37:56 UTC         
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                             ╭───────────────  Error  ───────────────╮                                                               
                                                             │    No items found matching search     │                                                               
                                                             │                                       │                                                               
                                                             ╰───────────────────────────────────────╯
